# rfcommunity

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  rfcomm.c
include/: rfcommunity.cxx  rfcommunity.hxx
